Lots of refactoring for auth, calendar etc. Also got rid of STI.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,12 @@
 div#loginDialogPaneActionBar {
   text-align : left !important;
 }
+
+div#loginModalDialog{
+  width : 50%;
+}
+
+div#displayCalendar{
+  height : 75%;
+  width : 75%;
+}
