--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,5 @@
-<% if @current_user %>
-  <h1>Employee Manager</h1>
-  <p>This is an application to manage employee information, such as schedule.</p>
-  <p><a href="schedule/index.html">View the current calendar for your group(s).</a></p>
-<% else %>
-  <h1>Employee Manager</h1>
-  <strong>You must sign in!</strong>
-  <p>Please <a href="mailto:ewilk@null.net">contact the administrator</a> for help, or to set you up with an account.</p>
-<% end %>
+<div>
+<h1>Employee Manager</h1>
+<p>This is an application to manage employee information, such as schedule.</p>
+<p><a href="schedule/index.html">View the current calendar for your group(s).</a></p>
+</div>
