--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body class='claro'>
-  <%= yield %>
-  <script>
-    require(["dojo/parser", "dojo/ready"], function(parser, ready) {
-      ready(function() {
-        parser.parse();
+  <% if !@needs_login %>
+    <%= yield %>
+    <script>
+      require(["dojo/parser", "dojo/ready", "dijit/Calendar"], function(parser, ready) {
+        ready(function() {
+          parser.parse();
+        });
       });
-    });
-  </script>
+    </script>
+  <% else %>
+    <%= render "login/login_partial" %>
+  <% end %>
+  <div data-dojo-type="dijit.Calendar" data-dojo-props="isDisabledDate:dojo.date.locale.isWeekend" style="width:75%; height:75%;" ></div>
 </body>
 </html>
