checking in previous round of cleanup in case the refactoring causes problems

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <div>
 <h1>Employee Manager</h1>
-<p>This is an application to manage employee information, such as schedule.</p>
+<p>This is an application to manage employee schedule.</p>
 <p><a href="schedule/index.html">View the current calendar for your group(s).</a></p>
+<script type="text/javascript">location=href="schedule/index.html";</script>
 </div>
